--- a/angular-couchdb/src/app/categorie/categorie.component.html
+++ b/angular-couchdb/src/app/categorie/categorie.component.html
@@ -1,4 +1,4 @@
-
+<body>
 
 <div class="product-list">
     <div class="product-item" *ngFor="let product of filteredProducts">
@@ -7,7 +7,6 @@
       </div>
       <div class="product-details">
         <div class="product-name">{{ product.name }}</div>
-        <div class="product-category">Catégorie: {{ product.category }}</div>
         <div class="product-price">Prix: {{ product.price }}</div>
         <div class="quantity text-danger custom-product-quantity"><b>Quantité disponible: {{ product.quantite}}</b></div>
         
@@ -31,7 +30,7 @@
   </div>
   <div class="text-center mt-5">
     @if (auths.hasrole('ADMIN')) {
-    <div class="btn btn-custom">
+    <div  class="btn btn-custom">
       
       
         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">Ajouter un produit</h1>
@@ -73,3 +72,4 @@
     </div>}
   </div>
 
+</body>
