--- a/angular-couchdb/src/app/cart/cart.component.html
+++ b/angular-couchdb/src/app/cart/cart.component.html
@@ -1,3 +1,6 @@
+<body>
+  
+
 <div class="product-container">
   <div class="product-item" *ngFor="let item of cartItems">
     <img style="width: 3cm; height: 3cm;" [src]="'assets/images/' + item.url_image" alt="Product Image">
@@ -9,4 +12,5 @@
   </div>
 </div>
 
+</body>
 
