--- a/angular-couchdb/src/app/navbar/navbar.component.html
+++ b/angular-couchdb/src/app/navbar/navbar.component.html
@@ -1,15 +1,37 @@
+<html>
+<head>
+                      
+</head>
+
 <body>
-    <div class="scroll-container">
-        <a [routerLink]="['/admin/categorie', 'phone']">
-            <img src="https://www.cadeboite.fr/wp-content/uploads/2020/10/iphone12pro-promotion-acheter-moins-cher.jpg" alt="">
-        </a>
-        <a [routerLink]="['/admin/categorie', 'pc']">
-            <img src="https://wp-pa.phonandroid.com/uploads/2024/02/Lenovo_transparent.jpg" alt="">
-        </a>
-        <a [routerLink]="['/admin/categorie', 'watch']">
-            <img src="https://iphonesoft.fr/images/_092020/apple-watch-6-officiel-apple.jpg" alt="">
-        </a>
-        
-    </div>
-    
+      <header>
+             
+      </header>
+      <nav>
+            
+
+      </nav>
+      <main>
+        <div class="scroll-container">
+            <a [routerLink]="['/admin/categorie', 'phone']">
+                <img src="https://www.cadeboite.fr/wp-content/uploads/2020/10/iphone12pro-promotion-acheter-moins-cher.jpg" alt="">
+            </a>
+            <a [routerLink]="['/admin/categorie', 'pc']">
+                <img src="https://wp-pa.phonandroid.com/uploads/2024/02/Lenovo_transparent.jpg" alt="">
+            </a>
+            <a [routerLink]="['/admin/categorie', 'watch']">
+                <img src="https://iphonesoft.fr/images/_092020/apple-watch-6-officiel-apple.jpg" alt="">
+            </a>
+            
+        </div> 
+      </main>
+      <footer>
+                </footer>
+
+
+
+
+
+                      
 </body>
+</html>
