--- a/angular-couchdb/src/app/admintemplate/admintemplate.component.css
+++ b/angular-couchdb/src/app/admintemplate/admintemplate.component.css
@@ -25,6 +25,7 @@
     background-color: #fff; /* Couleur de fond du dropdown */
     padding: 5px 0;
     border: 1px solid #ccc; /* Bordure du dropdown */
+    
   }
   
   /* Style pour afficher le dropdown au survol */
@@ -45,4 +46,50 @@
     background-color: #f0f0f0; /* Couleur de fond au survol */
   }
   
+  .button{
+    float:right;
+    border-radius: 17px;
+    width: 150px;
+    height: 35px;
+    cursor: pointer;
+    
+    color: white;
+    background-color:rgb(0, 0, 0)
+   }   
+
+   #divid div{
+        
+    float: left;
+    display: flex ;
+    width: 100px;
+    LINE-height: 3;
+    transform: translate(500px, 2px);
+    
+    
+   }
+   nav {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(238, 227, 227);
+  transform: translate(0px, 0px); /* Modifier le transform pour annuler le décalage vers le haut */
+}
+.menu{
+  text-decoration: none;
+  color: black;
+  font-family: verdana;
+  font-size: 15px;
   
+  
+  
+}
+.menu:hover{
+  opacity: 0.4;
+  border: rgb(190, 183, 170) solid 2px;
+  border-bottom-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+  border-top-left-radius: 17px;
+  border-top-right-radius: 17px;
+  font-family: arial black;
+
+}
+
