--- a/angular-couchdb/src/app/cart/cart.component.html
+++ b/angular-couchdb/src/app/cart/cart.component.html
@@ -27,7 +27,7 @@
             <p>{{ item.price }}</p>
             <p>{{ item.description }}</p>
             
-            <button type="button"(click)="removeFromCart(item)" class="btn btn-outline-warning">supprimer</button>
+            <button type="button"(click)="removeFromCart(item)" class="btn btn-outline-warning" i18n>delete</button>
           </div>
         </div>  
       </main>
