--- a/angular-couchdb/src/app/products/products.component.html
+++ b/angular-couchdb/src/app/products/products.component.html
@@ -1,61 +1,69 @@
-<body class="body">
-  <div>
-    @for (p of products; track $index) {
-      <app-productdetails [p]="p" (buyEvent)="buying(p)" (addToCartEvent)="addToCart($event)"  (deleteEvent)="deleteProduct(p)"></app-productdetails>
-      
-  }
-  </div>
-  <div>
-    <div class="text-center mt-5">
-      @if (auths.hasrole('ADMIN')) {
-      <div class="btn btn-custom">
-        
-        
-          <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">Ajouter un produit</h1>
-          <form class="form-container" (ngSubmit)="addProduct()">
-            <div class="form-group">
-              <label for="name">Nom du produit :</label>
-              <input type="text" id="name" [(ngModel)]="newProduct.name" name="name" class="form-control" required>
-            </div>
+<!DOCTYPE html>
+<html>
+<head>
+    
+</head>
+<body>
+    <header>
+        <div></div>
+    </header>
+    <div class="body-container">
+        <div class="left-side">
+            <div class="text-center mt-5">
+                @if (auths.hasrole('ADMIN')) {
+                <div class="btn btn-custom">
+                  
+                  
+                    <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;" i18n>ADD PRODUCT </h1>
+                    <form class="form-container" (ngSubmit)="addProduct()">
+                      <div class="form-group">
+                        <label for="name">Nom du produit :</label>
+                        <input type="text" id="name" [(ngModel)]="newProduct.name" name="name" class="form-control" required>
+                      </div>
+                    
+                      <div class="form-group">
+                        <label for="category">category</label>
+                        <input type="text" id="category" [(ngModel)]="newProduct.category" name="category" class="form-control" required>
+                      </div>
           
-            <div class="form-group">
-              <label for="category">category</label>
-              <input type="text" id="category" [(ngModel)]="newProduct.category" name="category" class="form-control" required>
-            </div>
-
-            <div class="form-group">
-              <label for="price">Prix :</label>
-              <input type="number" id="price" [(ngModel)]="newProduct.price" name="price" class="form-control" required>
-            </div>
-          
-            <div class="form-group">
-              <label for="url_image">URL de l'image :</label>
-              <input type="url" id="url_image" [(ngModel)]="newProduct.url_image" name="url_image" class="form-control" required>
-            </div>
-          
-            <div class="form-group">
-              <label for="quantity">Quantité :</label>
-              <input type="number" id="quantity" [(ngModel)]="newProduct.quantite" name="quantity" class="form-control" required>
-            </div>
-          
-            <div class="form-group">
-              <label for="description">Description :</label>
-              <textarea id="description" [(ngModel)]="newProduct.description" name="description" class="form-control"></textarea>
-            </div>
-          
-            <button type="submit" class="btn btn-outline-dark">add</button>
-          </form>
-          
-        
-      </div>}
+                      <div class="form-group">
+                        <label for="price">Prix :</label>
+                        <input type="number" id="price" [(ngModel)]="newProduct.price" name="price" class="form-control" required>
+                      </div>
+                    
+                      <div class="form-group">
+                        <label for="url_image">URL de l'image :</label>
+                        <input type="url" id="url_image" [(ngModel)]="newProduct.url_image" name="url_image" class="form-control" required>
+                      </div>
+                    
+                      <div class="form-group">
+                        <label for="quantity">Quantité :</label>
+                        <input type="number" id="quantity" [(ngModel)]="newProduct.quantite" name="quantity" class="form-control" required>
+                      </div>
+                    
+                      <div class="form-group">
+                        <label for="description">Description :</label>
+                        <textarea id="description" [(ngModel)]="newProduct.description" name="description" class="form-control"></textarea>
+                      </div>
+                    
+                      <button type="submit" class="btn btn-outline-dark">add</button>
+                    </form>
+                    
+                  
+                </div>}
+              </div>
+        </div>
+        <div class="right-side">
+            <div>
+                @for (p of products; track $index) {
+                  <app-productdetails [p]="p" (buyEvent)="buying(p)" (addToCartEvent)="addToCart($event)"  (deleteEvent)="deleteProduct(p)"></app-productdetails>
+                  
+              }
+              </div>
+        </div>
     </div>
-    
-    
-  </div>
-  
-  
-  
-  
-  
-  
+    <footer>
+       <div></div>
+    </footer>
 </body>
+</html>
