--- a/angular-couchdb/src/app/categorie/categorie.component.css
+++ b/angular-couchdb/src/app/categorie/categorie.component.css
@@ -47,3 +47,35 @@
     padding: 20px;
   }
   
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.haa{
+    background-color: yellow;
+}
+
+header, footer {
+    height: 15%;
+    background-color: rgb(254, 255, 176);
+}
+
+footer {
+    background-color: rgb(254, 255, 176);
+}
+
+.body-container {
+    height: 70%;
+    display: flex;
+}
+
+.left-side {
+    width: 20%;
+    background-color:rgb(254, 255, 176);
+}
+
+.right-side {
+    width: 80%;
+    background-color: rgb(254, 255, 176); /* Remplacé par une couleur de test */
+}
