--- a/angular-couchdb/src/app/login/login.component.html
+++ b/angular-couchdb/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="background-image: url(https://img.freepik.com/free-vector/geometric-gradient-futuristic-background_23-2149116406.jpg)">
+<div style="background-image: url(https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg)">
     
         <div class="section">
             <div class="container">
