--- a/angular-couchdb/src/app/productdetails/productdetails.component.css
+++ b/angular-couchdb/src/app/productdetails/productdetails.component.css
@@ -1,113 +1,47 @@
-.container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .filters {
-    display: flex;
-    justify-content: space-between;
-    padding: 25px 200px;
-  }
-  
-  .filters button {
-    width: 100px;
-  }
-  
-  .products {
-    margin: 0 100px;
-    border-top: 2px solid #999;
-  }
-  
-  .product-item {
-    border-bottom: 2px solid #999;
-  }
-  
-  /* Product Details */
-  .product {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 25px;
-  }
-  
-  .product .product-details {
-    display: flex;
-    align-items: center;
-  }
-  
-  .product img {
-    width: 125px;
-    
-  }
-  
-  .product .product-info {
-    margin-left: 25px;
-  }
-  
-  .product .name {
-    text-shadow: 10px rgb(138, 21, 255);
-    font-size: 20px;
-    font-weight: bold;
-    
-  }
-  #name{
-    -webkit-text-stroke-color: rgb(38, 16, 106);
-    -webkit-text-stroke-width:2px;
-  }
-  
-  .product .description {
-    text-shadow: 10px rebeccapurple;
-    margin-top: 3px;
-    font-size: 18px;
-  }
-  
-  .product .category {
-    margin-top: 20px;
-    color: #777;
-  }
-  
-  .product .price {
-    display: flex;
-    flex-direction: column;
-    font-size: 25px;
-    justify-content: space-around;
-    align-items: center;
-    min-width: 190px;
-    color: #555;
-    border-left: 2px solid #aaa;
-    margin-left: 50px;
-  }
-  #d1{
-    opacity: 0.8;
-    font-size: 17px;
-    color: cadetblue;
-  }
-  #alert{
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
 
-  display:flex;
+.product-item {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: rgba(231, 231, 84, 0.849);
+}
+
+.product-item:hover {
+  transform: scale(1.07);
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-content {
+  display: grid;
+  grid-template-columns: 5cm auto;
+}
+
+.product-image {
+  display: flex;
   align-items: center;
-   
-  }
-  .product .price button {
-    padding: 10px;
-    width: 100px;
-  }
-  #img{   
-    width: 100px;
-    height: 100px;
-  }
-  #img:hover{
-
-    opacity: 0.3;
-    width: 500px;
-    
-}
-#desc{
-  opacity: 0.5;
- font-size: 15px;
-}
-.custom-ul {
-  list-style-type: none; /* Supprime les points de la liste */
-  padding: 0; /* Supprime le padding par défaut de la liste */
-  margin: 0; /* Supprime la marge par défaut de la liste */
 }
 
+.product-details {
+  padding-left: 20px;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.product-content {
+  display: flex;
+}
+
+.alerts {
+  margin-left: auto;
+  margin-top: 50px;
+}
