--- a/angular-couchdb/src/app/productdetails/productdetails.component.html
+++ b/angular-couchdb/src/app/productdetails/productdetails.component.html
@@ -1,55 +1,38 @@
-
-  <ul class="products" class="custom-ul">
-    <li class="product-item">
-      <div class="product">
-        <div  class="product-details">
-          <img [src]="getImageURL(p)" style="width: 3cm; height: 3cm;" />
-          <div class="product-info">
-            <div class="name" id="name">{{p.name}}</div>
-            
-            
-            
-              <div class="name" id="d1">{{p.price}} DH</div>
-              <div class="name" id="d1">{{p.quantite}}pieces</div>
-            @if (showDetails) {
-              
-              <div class="name" id="desc" >{{p.description}}</div>
-            }
-            
-            
-            <div class="description"></div>
-            <button (click)="toggleDetails(p)">Voir les détails</button>
-          </div>
+<div class="right-side">
+  <div class="product-list">
+    <div class="product-item">
+      <div class="product-content">
+        <div class="product-image">
+          <img [src]="getImageURL(p)" style="width: 5cm; height: 5cm;" />
         </div>
-        
-
-        @if (p.qeerebyasali && p.quantite!=0) {
-          <div id="alert" style="color: rgb(251, 6, 6);">QUANTITE INSSUFISANT⁉️ </div>
-          }
-          
-          
-        <div class="price">
-          @if (p.quantite==0) {
-            <label style="color: rgb(200, 187, 11); text-align: end;">PRODUCT EXPIRED⚠️</label>
-           }
-          @if (authss.hasrole('USER')) {
-            <button class="btn btn-light" [disabled]="p.quantite === 0 " (click)="addToCart(p)"(click)="buying()">🛒   buy<i class="bi bi-cart"></i></button>
-          }
-          
-          @if(authss.hasrole('ADMIN')){
-            
-            <button type="button" class="btn btn-outline-danger" (click)="deleteProduct(p)">Delete</button>
-            
-          }
-          
+        <div class="product-details">
+          <div class="product-name">{{ p.name }}</div>
+          <div class="product-price">Prix: {{ p.price }}</div>
+          <div class="quantity text-danger custom-product-quantity"><b>Quantité disponible: {{ p.quantite }}</b></div>
+          <details class="accordion">
+            <summary>Détails du produit</summary>
+            <div class="accordion-body">
+              <p>{{ p.description }}</p>
+            </div>
+          </details>
         </div>
-        
+        <div class="alerts">
+          @if (p.qeerebyasali && p.quantite != 0){
+            <div id="alert" style="color: rgb(251, 6, 6);" i18n>QUANTITE INSSUFISANT⁉️🚨</div>
+        }
+          @if (p.quantite == 0){
+            <label style="color: rgb(0, 0, 0);" i18n>PRODUCT EXPIRED⚠️</label>
+      }
+        </div>
       </div>
-    </li>
-  </ul>
-
-  
-    
-
-
-
+      
+        @if (authss.hasrole('USER')){
+          <button style="background-color: rgb(175, 205, 232);" class="btn btn-light" [disabled]="p.quantite === 0" (click)="addToCart(p); buying()">🛒   buy<i class="bi bi-cart"></i></button>
+      }
+        @if (authss.hasrole('ADMIN')){
+          <button type="button" class="btn btn-outline-danger" (click)="deleteProduct(p)">Delete</button>
+     }
+      
+    </div>
+  </div>
+</div>
