--- a/angular-couchdb/src/app/products/products.component.css
+++ b/angular-couchdb/src/app/products/products.component.css
@@ -7,7 +7,7 @@
     margin-bottom: 1rem;
   }
   .body{
-    background-color: rgb(236, 242, 211);
+    background-color: rgb(248, 248, 248);
   }
   .btn-custom {
     background-color: rgb(206, 214, 124);
@@ -42,12 +42,21 @@ footer {
   display: flex;
 }
 
-.left-side {
-  width: 20%;
-  background-color:rgb(254, 255, 176);
-}
+
 
 .right-side {
   width: 80%;
-  background-color: rgb(254, 255, 176); /* Remplacé par une couleur de test */
+  background-color: rgb(255, 251, 171); /* Remplacé par une couleur de test */
 }
+
+.left-side {
+  
+  
+  width: 20%;
+  background-color:rgb(0, 0, 0);
+  overflow-y: auto; /* Permet le défilement si le contenu dépasse la hauteur */
+}
+
+
+
+
