--- a/angular-couchdb/src/app/products/products.component.html
+++ b/angular-couchdb/src/app/products/products.component.html
@@ -9,9 +9,15 @@
     </header>
     <div class="body-container">
         <div class="left-side">
-            <div class="text-center mt-5">
+          @if (auths.hasrole('USER')) {
+                
+            <img  style="position: fixed;width: 20%; height: 100%;margin-left: 5px;margin-bottom: 15px; " src="\assets\images\imm.jpg" alt="">
+            
+        }
+            <div style="position: fixed" class="text-center mt-5">
+              
                 @if (auths.hasrole('ADMIN')) {
-                <div class="btn btn-custom">
+                <div   class="btn btn-custom" style="width: 9cm;">
                   
                   
                     <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;" i18n>ADD PRODUCT </h1>
