--- a/angular-couchdb/src/app/categorie/categorie.component.html
+++ b/angular-couchdb/src/app/categorie/categorie.component.html
@@ -11,7 +11,7 @@
         <div class="left-side">
             <div class="text-center mt-5">
                 @if (auths.hasrole('ADMIN')) {
-                <div  class="btn btn-custom">
+                <div style="background-color: rgb(0, 0, 0); color: #ffffff;" class="btn btn-custom">
                   
                   
                     <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">Ajouter un produit</h1>
