--- a/angular-couchdb/src/app/productdetails/productdetails.component.html
+++ b/angular-couchdb/src/app/productdetails/productdetails.component.html
@@ -15,12 +15,11 @@
               <p>{{ p.description }}</p>
             </div>
           </details>
-          
         </div>
         
         <div class="alerts">
           @if (p.qeerebyasali && p.quantite != 0){
-            <div id="alert" style="color: rgb(251, 6, 6);" i18n>QUANTITE INSSUFISANT⁉️</div>
+            <div id="alert" style="color: rgb(251, 6, 6);" i18n>QUANTITE INSSUFISANTE⁉️</div>
           }
           @if (p.quantite == 0){
             <label style="color: rgb(179, 0, 0);" i18n>PRODUCT EXPIRED🚨</label>
@@ -28,15 +27,13 @@
         </div>
         <div class="btn">
           @if (authss.hasrole('USER')){
-            <button class="btn btn-light" [disabled]="p.quantite === 0" (click)="addToCart(p); buying()">🛒   buy<i class="bi bi-cart"></i></button>
+            <button class="btn btn-light" [disabled]="p.quantite === 0" (click)="addToCart(p); buying()">🛒 buy<i class="bi bi-cart"></i></button>
           }
           @if (authss.hasrole('ADMIN')){
-            <button type="button" class="btn btn-outline-danger" (click)="deleteProduct(p)">Delete</button>
+            <button type="button" class="btn btn-outline-warning edit-btn" (click)="editProduct()">Edit</button>
+            <button type="button" class="btn btn-outline-danger delete-btn" (click)="deleteProduct(p)">Delete</button>
           }
         </div>
-      </div>
-      <div class="buttons">
-        
       </div>
     </div>
   </div>
